<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoReclamoFragment">
    <TextView
        android:text="Coordenadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/reclamo_coord"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <Button
            android:text="Buscar Coordenadas"
            android:id="@+id/btnBuscarCoordenadas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
    <TextView
        android:text="Email de contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reclamo_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="Descripcion reclamo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reclamo_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="Tipo de reclamo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/reclamo_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="Tomar Foto"
            android:id="@+id/btnTomarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/imgReclamo"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="Grabar"
            android:id="@+id/btnGrabarAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="Reproducir"
            android:id="@+id/btnReproducirAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/btnGuardar"
        android:text="Guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>